# value_investing_screening

./: .gitignore  CLAUDE.md  DESIGN.md  ISSUES.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md  pyproject.toml
LEGACY/: REQUIREMENTS.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md  requirements.txt
LEGACY/analysis/: factor_analysis.py  growth_calculation.py  intrinsic_value.py  ranking.py  weighted_scoring.py
LEGACY/config/: user_config.py
LEGACY/data_pipeline/: data_loading.py  data_schema.py  data_structures.py  filtering.py  ticker_mapping.py
LEGACY/data_sources/: yahoo_finance.py
LEGACY/input/: 250809_ASX_market_caps.csv  ASXListedCompanies.csv
LEGACY/pipeline/: __main__.py  runner.py
LEGACY/reports/: methodology_generator.py  report_generator.py  report_visualizations.py  visualization.py
LEGACY/scripts/: main_pipeline.py
LEGACY/tests/: test_pdf.py  test_ranking.py  test_runner.py
pipeline/: __main__.py  config.py  main.py  runner.py  screening.py  simulation.py
pipeline/analysis/: dcf.py  derived_metrics.py  factor_analysis.py  filtering.py  growth_projection.py  growth_stats.py  ranking.py  (+1 more)
tests/: test_charts.py  test_contracts.py  test_data.py  test_dcf.py  test_derived_metrics.py  test_detail_report.py  test_factor_analysis.py  test_filtering.py  test_growth_projection.py  test_growth_stats.py  test_live_prices.py  test_loader.py  test_main.py  test_pdf.py  test_quality.py  test_runner.py  test_safety.py  test_screening.py  test_sentiment.py  test_settings.py  test_simulation.py  test_trends.py  test_valuation.py  test_watchlist.py  test_weighted_scoring.py
(+25 files in other folders)
