[project]
name = "value-investing-screening"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "jinja2",
    "weasyprint",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PLC", "PLE", "PLW", "RUF"]
ignore = ["S608"]  # SQL injection — we validate identifiers manually

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is expected in pytest

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["weasyprint", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
